# platform.core.api.media-controller

./: AUTHORS  CMakeLists.txt  capi-media-controller.manifest  capi-media-controller.pc.in  media-controller-service.manifest
dbus/: media-controller.conf  media-controller.conf~
doc/: media_controller_doc.h
include/: media_controller_client.h  media_controller_db.h  media_controller_private.h  media_controller_server.h  media_controller_type.h
packaging/: capi-media-controller.spec  media-controller-user.service  media-controller_create_db.sh  mediacontroller-ipc.socket  mediacontroller.service  mediacontroller.socket
src/: media_controller_client.c  media_controller_db.c  media_controller_ipc.c  media_controller_server.c  media_controller_util.c
svc/: CMakeLists.txt  media_controller_cynara.c  media_controller_cynara.h  media_controller_db_util.c  media_controller_db_util.h  media_controller_socket.c  media_controller_socket.h  media_controller_svc.c  media_controller_svc.h
svc/daemon/: CMakeLists.txt  media_controller_main.c
test/client_test/: CMakeLists.txt  media_controller_client_test.c
test/server_test/: CMakeLists.txt  media_controller_server_test.c
